// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenu can pass-through horizontal rule props 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        Testing separator
      </span>
    </div>
    <div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginSmall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenu testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiContextMenu panel item can be a separator line 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        Testing separator
      </span>
    </div>
    <div>
      <div>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              Foo
            </span>
          </span>
        </button>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full"
        />
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              Bar
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu panel item can contain JSX 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        3
      </span>
    </div>
    <div>
      <div>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              <span
                style="color:tomato"
              >
                foo
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 1`] = `
<div
  class="euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 2`] = `
<div
  class="euiContextMenu"
  style="height: 0px; width: 400px;"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutRight"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInRight"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          1
        </span>
      </span>
    </button>
    <div>
      <div>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2a
            </span>
            <span
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2b
            </span>
            <span
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="euiContextMenuItem"
          type="button"
        >
          <span
            class="euiContextMenu__itemLayout"
          >
            <span
              class="euiContextMenuItem__text"
            >
              2c
            </span>
            <span
              class="euiContextMenu__arrow"
              data-euiicon-type="arrowRight"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId renders the referenced panel 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props size m is rendered 1`] = `
<div
  class="euiContextMenu"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props size s is rendered 1`] = `
<div
  class="euiContextMenu euiContextMenu--small"
>
  <div
    class="euiContextMenuPanel euiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="euiContextMenuPanelTitle euiContextMenuPanelTitle--small"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenu__icon"
          data-euiicon-type="arrowLeft"
        />
        <span
          class="euiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenuPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenuPanel testClass1 testClass2"
  data-test-subj="test subject string"
  tabindex="-1"
>
  <div>
    <div>
      Hello
    </div>
  </div>
</div>
`;

exports[`EuiContextMenuPanel props onClose renders a button as a title 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <button
    class="euiContextMenuPanelTitle"
    data-test-subj="contextMenuPanelTitleButton"
    type="button"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      <span
        class="euiContextMenu__icon"
        data-euiicon-type="arrowLeft"
      />
      <span
        class="euiContextMenu__text"
      >
        Title
      </span>
    </span>
  </button>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props size m is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props size s is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle euiContextMenuPanelTitle--small"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props title is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInLeft"
  tabindex="-1"
>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutLeft"
  tabindex="-1"
>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInRight"
  tabindex="-1"
>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutRight"
  tabindex="-1"
>
  <div>
    <div />
  </div>
</div>
`;

exports[`EuiContextMenuPanel updating items and content updates to items should not re-render if any items's watchedItemProps did not change 1`] = `
"<EuiContextMenuPanel items={{...}} hasFocus={true}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          <EuiContextMenuItem data-counter={0} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={0}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option A
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
          <EuiContextMenuItem data-counter={1} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={1}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option B
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;

exports[`EuiContextMenuPanel updating items and content updates to items should not re-render if any items's watchedItemProps did not change 2`] = `
"<EuiContextMenuPanel items={{...}} hasFocus={true}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          <EuiContextMenuItem data-counter={0} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={0}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option A
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
          <EuiContextMenuItem data-counter={1} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={1}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option B
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;

exports[`EuiContextMenuPanel updating items and content updates to items should re-render at all times when children exists 1`] = `
"<EuiContextMenuPanel hasFocus={true} items={{...}}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          Hello World
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;

exports[`EuiContextMenuPanel updating items and content updates to items should re-render at all times when children exists 2`] = `
"<EuiContextMenuPanel hasFocus={true} items={{...}}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          More Salutations
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;

exports[`EuiContextMenuPanel updating items and content updates to items should re-render if any items's watchedItemProps did change 1`] = `
"<EuiContextMenuPanel watchedItemProps={{...}} items={{...}} hasFocus={true}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          <EuiContextMenuItem data-counter={0} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={0}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option A
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
          <EuiContextMenuItem data-counter={1} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={1}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option B
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;

exports[`EuiContextMenuPanel updating items and content updates to items should re-render if any items's watchedItemProps did change 2`] = `
"<EuiContextMenuPanel watchedItemProps={{...}} items={{...}} hasFocus={true}>
  <div className=\\"euiContextMenuPanel\\" onKeyDown={[Function]} tabIndex={-1} onAnimationEnd={[Function]}>
    <div>
      <EuiResizeObserver onResize={[Function: onResize]}>
        <div>
          <EuiContextMenuItem data-counter={2} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={2}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option A
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
          <EuiContextMenuItem data-counter={3} buttonRef={[Function: buttonRef]}>
            <button disabled={false} className=\\"euiContextMenuItem\\" type=\\"button\\" data-counter={3}>
              <span className=\\"euiContextMenu__itemLayout\\">
                <span className=\\"euiContextMenuItem__text\\">
                  Option B
                </span>
              </span>
            </button>
          </EuiContextMenuItem>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiContextMenuPanel>"
`;
